Prime modifiche di stile

--- a/mobile/src/app/app.scss
+++ b/mobile/src/app/app.scss
@@ -1,5 +1,12 @@
 // http://ionicframework.com/docs/v2/theming/
 
+.pages{
+    text-transform: uppercase;
+}
+
+.prime{
+    background-color: #344294;
+}
 
 // App Global Sass
 // --------------------------------------------------
