--- a/mobile/src/app/app.html
+++ b/mobile/src/app/app.html
@@ -1,13 +1,10 @@
-<ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ <ion-menu [content]="content">  
 
-  <ion-content>
+  <ion-content class="prime">
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" color="primary" class="pages">
+        <ion-icon [name]="p.icon">
+        </ion-icon>
         {{p.title | translate}}
       </button>
     </ion-list>
