--- a/mobile/src/theme/variables.scss
+++ b/mobile/src/theme/variables.scss
@@ -34,11 +34,14 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #344294,
   secondary:  #32db64,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #ffffff,
+  dark:       #222,
+  date:    (base:     #ffffff,
+            contrast: #4053a0),
+  sbar:       #fcc010,
 );
 
 
