Grafica, inizio dei lavori per il filtro

--- a/mobile/src/app/app.html
+++ b/mobile/src/app/app.html
@@ -1,7 +1,7 @@
  <ion-menu [content]="content">  
 
   <ion-content class="prime">
-    <ion-list>
+    <ion-list mode="md">
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" color="primary" class="pages">
         <ion-icon [name]="p.icon">
         </ion-icon>
