--- a/mobile/src/app/app.scss
+++ b/mobile/src/app/app.scss
@@ -1,7 +1,23 @@
 // http://ionicframework.com/docs/v2/theming/
 
+.item-md-primary{
+    min-height: 55px;
+}
+
 .pages{
     text-transform: uppercase;
+}
+
+.pages.item-md .item-inner{
+    border-bottom: 0px;
+}
+
+.pages.item-ios .item-inner{
+    border-bottom: 0px;
+}
+
+.pages.item-wp .item-inner{
+    border-bottom: 0px;
 }
 
 .prime{
