--- a/mobile/src/pages/elementList/elementList.scss
+++ b/mobile/src/pages/elementList/elementList.scss
@@ -1,7 +1,66 @@
+.searchbar .searchbar-input{
+    background-color: #fcc010;
+}
+
 .searchbar{
     background-color: #fcc010;
 }
 
-.button-inner{
+.tags{
+    font-size: 12.5px;
+    color: #4053a0;
+}
+
+p.pubb{
+    color: #bdbcbc;
+}
+
+.crea{
+    color: #000;
+}
+
+.grey{
+    color: #bdbcbc;
+}
+
+.item-divider{
     text-align: center;
+}
+
+.alert-ios .alert-button:last-child{
+    font-weight: normal;
+}
+
+
+.alert-ios .alert-button-group{
+    display: grid;
+}
+
+.alert-md .button-inner{
+    display: block;
+    text-align: center;
+}
+
+.alert-md .alert-button{
+    width: 100%;
+}
+
+.alert-md .alert-button-group{
+    display: block;
+    padding: 8px;
+}
+
+.alert-wp .alert-button{
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.alert-wp .alert-button-group{
+    display: block;
+}
+
+.item-inner .badge{
+    border-radius: 50%;
+    font-weight: normal;
+    padding: 3px 6px;
 }
