Ulteriori modifiche grafiche, piccoli problemi con la ricerca per data nel calendario.

--- a/mobile/src/app/app.scss
+++ b/mobile/src/app/app.scss
@@ -8,15 +8,7 @@
     text-transform: uppercase;
 }
 
-.pages.item-md .item-inner{
-    border-bottom: 0px;
-}
-
-.pages.item-ios .item-inner{
-    border-bottom: 0px;
-}
-
-.pages.item-wp .item-inner{
+.list .pages.item{
     border-bottom: 0px;
 }
 
