Implementati preferiti per eventi singoli e per sorgenti. Ancora da implementare temi, ma dovrebbe essere facile.

--- a/mobile/src/pages/elementList/elementList.scss
+++ b/mobile/src/pages/elementList/elementList.scss
@@ -203,3 +203,18 @@ p.pubb{
 .select-alert.alert-wp .alert-checkbox-group{
     background-color: #ffffff;
 }
+
+.item .fav.badge{
+    width: 30px;
+    height: 30px;
+    background-color: #ffffff;
+}
+
+.fav.badge .button{
+    width: 20px;
+    height: 20px;
+    margin: 0px;
+    padding: 0px;
+    color: #344294;
+    background-color: #ffffff;
+}
