--- a/mobile/src/pages/elementDetails/elementDetails.scss
+++ b/mobile/src/pages/elementDetails/elementDetails.scss
@@ -22,3 +22,9 @@ h2{
     margin-left: 5px;
     font-size: 17.5px;
 }
+
+.add{
+    color: #fcc010;
+    text-decoration: underline;
+    font-weight: 500;
+}
