MOdifiche grafiche minori

--- a/mobile/src/pages/elementList/elementList.scss
+++ b/mobile/src/pages/elementList/elementList.scss
@@ -236,3 +236,11 @@ p.pubb{
 .col{
     text-align: center;
 }
+
+.col.cred{
+    padding: 0px 10px 0px;
+}
+
+.row.credits_row{
+    padding: 0px 10px 0px;
+}
