--- a/mobile/src/pages/terms/terms-component.scss
+++ b/mobile/src/pages/terms/terms-component.scss
@@ -1,3 +1,4 @@
+terms {
 div {
   padding: 5px;
   text-align: justify;
@@ -78,4 +79,4 @@ div.policy_text.policy_text ul li {font-size:11px; margin-bottom:5px;}
     background-color: #11c1f3;
     color: #fff; }
 
-
+}
