Fixes for feedback
https://docs.google.com/document/d/1UGzEI98Q1ECVlcP8P0ochhHpx2yWAdORe8zMHmxUS4g/edit#

--- a/mobile/src/pages/filter/filter.scss
+++ b/mobile/src/pages/filter/filter.scss
@@ -14,3 +14,8 @@
 .bar-buttons{
     text-align: center;
 }
+
+.searchbar-md .searchbar-input::-webkit-input-placeholder {
+    text-indent: 0;
+    color: white;
+  }
