Fixes for prod release

--- a/mobile/src/app/app.scss
+++ b/mobile/src/app/app.scss
@@ -24,6 +24,19 @@
     display: none;
 }
 
+.bar-button-md {
+    font-size: medium;
+}
+
+ion-icon {
+    font-size: xx-large;
+    vertical-align: middle;
+}
+
+ion-label {
+    font-size: large;
+}
+
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
