Fixes for prod release

--- a/mobile/src/app/app.scss
+++ b/mobile/src/app/app.scss
@@ -28,13 +28,15 @@
     font-size: medium;
 }
 
-ion-icon {
-    font-size: xx-large;
-    vertical-align: middle;
-}
+page-favorites {
+    ion-icon {
+        font-size: xx-large;
+        vertical-align: middle;
+    }
 
-ion-label {
-    font-size: large;
+    ion-label {
+        font-size: large;
+    }
 }
 
 // App Global Sass
