--- a/mobile/src/pages/elementList/elementList.scss
+++ b/mobile/src/pages/elementList/elementList.scss
@@ -247,6 +247,13 @@ p.pubb{
     padding: 0px 10px 0px;
 }
 
+page-home {
+    .bar-button-default-md {
+        font-size: x-large;
+    }
+    
+}
+
 modal-page { // only for modal page.
     .item {
         background-color: orange;
