Fixes for calendar date issue

--- a/mobile/src/pages/elementDetails/elementDetails.scss
+++ b/mobile/src/pages/elementDetails/elementDetails.scss
@@ -28,3 +28,16 @@ h2{
     text-decoration: underline;
     font-weight: 500;
 }
+
+
+page-elementdetails {
+    ion-icon {
+        font-size: xx-large;
+        vertical-align: middle;
+    }
+
+    .bar-button-default-md {
+        font-size: x-large;
+    }
+
+}
