--- a/mobile/src/pages/tag/tag.scss
+++ b/mobile/src/pages/tag/tag.scss
@@ -1,3 +1,11 @@
 .maiusc{
     text-transform: capitalize;
 }
+
+page-taglist {
+    .tags {
+        font-size: 12.5px;
+        color: #4053a0;
+        display: block;
+      }
+}
