--- a/mobile/src/pages/elementList/elementList.scss
+++ b/mobile/src/pages/elementList/elementList.scss
@@ -207,6 +207,10 @@ p.pubb{
     padding: 1px 2px;
 }
 
+.scroll-content{
+    overflow-y:auto;
+}
+
 .credits_title {
     text-align: center;
     color: #4053a0;
