--- a/mobile/src/pages/elementList/elementList.scss
+++ b/mobile/src/pages/elementList/elementList.scss
@@ -207,6 +207,7 @@ p.pubb{
     padding: 1px 2px;
 }
 
+// FIX FOR REMOVAL OF GREY DOT ON TOP LEFT OF PAGE.
 .scroll-content{
     overflow-y:auto;
 }
