EventTiming introduced, element details style modified

--- a/mobile/src/pages/elementDetails/elementDetails.scss
+++ b/mobile/src/pages/elementDetails/elementDetails.scss
@@ -29,6 +29,10 @@ h2{
     font-weight: 500;
 }
 
+.left .button-inner{
+    justify-content: flex-start;
+}
+
 
 page-elementdetails {
     ion-icon {
