improved filter section

--- a/mobile/src/pages/filter/filter.scss
+++ b/mobile/src/pages/filter/filter.scss
@@ -18,4 +18,9 @@
 .searchbar-md .searchbar-input::-webkit-input-placeholder {
     text-indent: 0;
     color: white;
-  }
+}
+
+.specific-button .button-inner {
+    justify-content:flex-start;
+    color: grey;
+}
